--- a/index.html
+++ b/index.html
@@ -3,18 +3,18 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>pacc-homeguardian</title>
-    <meta name="description" content="Lovable Generated Project" />
-    <meta name="author" content="Lovable" />
+    <title>Pacc Solutions LLC - HomeGuardian</title>
+    <meta name="description" content="Pacc Solutions LLC - HomeGuardian: Home security and surveillance solutions" />
+    <meta name="author" content="Pacc Solutions LLC" />
 
-    <meta property="og:title" content="Lovable Generated Project" />
-    <meta property="og:description" content="Lovable Generated Project" />
+    <meta property="og:title" content="Pacc Solutions LLC - HomeGuardian" />
+    <meta property="og:description" content="Home security and surveillance solutions by Pacc Solutions LLC" />
     <meta property="og:type" content="website" />
-    <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <meta property="og:image" content="/american-roof-repair.jpg" />
 
     <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:site" content="@lovable_dev" />
-    <meta name="twitter:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <meta name="twitter:site" content="@paccsolutions" />
+    <meta name="twitter:image" content="/american-roof-repair.jpg" />
   </head>
 
   <body>
