Versão local definitiva

--- a/index.html
+++ b/index.html
@@ -1,17 +1,16 @@
-
 <!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Pacc Solutions LLC</title>
-    <meta name="description" content="Pacc Solutions LLC: Roofing, Exterior Remodeling & Public Adjusters" />
-    <meta name="author" content="Pacc Solutions LLC" />
+    <title>The Dirty Roofer</title>
+    <meta name="description" content="The Dirty Roofer: Expert Roofing Services in Boston and New England" />
+    <meta name="author" content="The Dirty Roofer" />
 
     <link rel="icon" type="image/png" href="/lovable-uploads/78ba4b6b-7444-4b1b-8f67-de37fb58730b.png" />
     <link rel="apple-touch-icon" href="/lovable-uploads/b3610406-d797-4162-84ae-5a2b19bf0a26.png" />
 
-    <meta property="og:title" content="Pacc Solutions LLC" />
+    <meta property="og:title" content="The Dirty Roofer" />
     <meta property="og:description" content="Roofing, Exterior Remodeling & Public Adjusters" />
     <meta property="og:type" content="website" />
     <meta property="og:image" content="/lovable-uploads/b3610406-d797-4162-84ae-5a2b19bf0a26.png" />
