--- a/index.html
+++ b/index.html
@@ -3,21 +3,32 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>The Dirty Roofer</title>
-    <meta name="description" content="The Dirty Roofer: Expert Roofing Services in Boston and New England" />
+    <title>The Dirty Roofer | Expert Roofing Services</title>
+    <meta name="description" content="The Dirty Roofer: Expert roofing specialists serving Boston and New England for 20 years. Quality copper, slate, rubber, and asphalt roofing. NO JOB TOO BIG OR TOO SMALL." />
     <meta name="author" content="The Dirty Roofer" />
 
-    <link rel="icon" type="image/png" href="/lovable-uploads/78ba4b6b-7444-4b1b-8f67-de37fb58730b.png" />
-    <link rel="apple-touch-icon" href="/lovable-uploads/b3610406-d797-4162-84ae-5a2b19bf0a26.png" />
-
-    <meta property="og:title" content="The Dirty Roofer" />
-    <meta property="og:description" content="Roofing, Exterior Remodeling & Public Adjusters" />
+    <!-- Favicons -->
+    <link rel="icon" type="image/png" href="/images/logo.png" />
+    <link rel="apple-touch-icon" href="/images/logo.png" />
+    
+    <!-- Open Graph / Facebook -->
     <meta property="og:type" content="website" />
-    <meta property="og:image" content="/lovable-uploads/b3610406-d797-4162-84ae-5a2b19bf0a26.png" />
+    <meta property="og:url" content="https://thedirtyroofer.com/" />
+    <meta property="og:title" content="The Dirty Roofer | Expert Roofing Services" />
+    <meta property="og:description" content="Family-owned roofing specialists with 20 years experience in Boston and New England. Experts in copper, slate, rubber, and asphalt roofing. Free estimates available!" />
+    <meta property="og:image" content="/images/logo.png" />
+    <meta property="og:image:alt" content="The Dirty Roofer logo" />
+    <meta property="og:site_name" content="The Dirty Roofer" />
 
+    <!-- Twitter -->
     <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:site" content="@paccsolutions" />
-    <meta name="twitter:image" content="/lovable-uploads/b3610406-d797-4162-84ae-5a2b19bf0a26.png" />
+    <meta name="twitter:title" content="The Dirty Roofer | Expert Roofing Services" />
+    <meta name="twitter:description" content="Family-owned roofing specialists with 20 years experience in Boston and New England. Experts in copper, slate, rubber, and asphalt roofing." />
+    <meta name="twitter:image" content="/images/logo.png" />
+    <meta name="twitter:image:alt" content="The Dirty Roofer logo" />
+
+    <!-- Theme color for browser UI -->
+    <meta name="theme-color" content="#121212" />
   </head>
 
   <body>
