--- a/public/404.html
+++ b/public/404.html
@@ -4,13 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Page Not Found - The Dirty Roofer</title>
-    <link rel="icon" type="image/png" href="/lovable-uploads/78ba4b6b-7444-4b1b-8f67-de37fb58730b.png" />
+    <link rel="icon" type="image/png" href="/images/logo.png" />
     <script src="https://cdn.gpteng.co/gptengineer.js" type="module"></script>
     <style>
         @import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;600;700;800&family=Inter:wght@300;400;500;600&display=swap');
         
         :root {
-            --navy: #0A1A2F;
+            --navy: #121212;
             --gold: #D4AF37;
         }
         
@@ -87,7 +87,7 @@
 </head>
 <body>
     <div class="container">
-        <img src="/images/4811a69a-c3ba-4318-bb8c-d90d22539145.png" alt="The Dirty Roofer" class="logo">
+        <img src="/images/logo.png" alt="The Dirty Roofer" class="logo">
         <h1 class="animate-bounce">404</h1>
         <p>Oops! The page you're looking for doesn't exist or has been moved.</p>
         <a href="/" class="button">Return to Home</a>
